feat 축제 이미지 생성 완      프론트 템플릿 수정