@@ -1,58 +1,51 @@
 package com.googoo.festivaldotcom.domain.festival.application.applicationService;
 
-// 필요한 라이브러리들을 import 합니다.
-
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
-import java.util.Date;
 
+@Slf4j // 로깅을 위한 Lombok 어노테이션
 @Service // 이 클래스가 서비스 레이어의 빈(Bean)임을 나타냅니다.
 public class ApiExplorer {
 
-    // application.properties 파일에서 'secretKey.festival'이라는 키로 값을 가져와 이 변수에 저장합니다.
     @Value("${secretKey.festival}")
-    private String FESTIVAL_SECRET_KEY;
+    private String FESTIVAL_SECRET_KEY; // application.properties에서 'secretKey.festival' 값을 주입받습니다.
 
     // API로부터 데이터를 가져오는 메서드입니다.
-    public String getDataFromApi() throws IOException {
-        // URL을 구성하기 위해 StringBuilder를 사용합니다.
-        StringBuilder urlBuilder = new StringBuilder("http://api.data.go.kr/openapi/tn_pubr_public_cltur_fstvl_api"); /*URL*/
+    public String getDataFromApi() throws IOException, URISyntaxException {
+        StringBuilder urlBuilder = new StringBuilder("http://api.data.go.kr/openapi/tn_pubr_public_cltur_fstvl_api"); // 기본 URL 설정
 
-        // 서비스 키를 URL에 추가합니다.
-        urlBuilder.append("?" + URLEncoder.encode("serviceKey", "UTF-8") + "=" + FESTIVAL_SECRET_KEY); /*Service Key*/
+        // URL에 쿼리 파라미터를 추가합니다.
+        urlBuilder.append("?").append(URLEncoder.encode("serviceKey", StandardCharsets.UTF_8)).append("=").append(FESTIVAL_SECRET_KEY); // 서비스 키 추가
+        urlBuilder.append("&").append(URLEncoder.encode("pageNo", StandardCharsets.UTF_8)).append("=").append(URLEncoder.encode("1", StandardCharsets.UTF_8)); // 페이지 번호 추가
+        urlBuilder.append("&").append(URLEncoder.encode("numOfRows", StandardCharsets.UTF_8)).append("=").append(URLEncoder.encode("100", StandardCharsets.UTF_8)); // 한 페이지 결과 수 추가
+        urlBuilder.append("&").append(URLEncoder.encode("type", StandardCharsets.UTF_8)).append("=").append(URLEncoder.encode("json", StandardCharsets.UTF_8)); // 응답 형식(JSON) 추가
 
-        // 페이지 번호를 URL에 추가합니다. 여기서는 1 페이지를 요청합니다.
-        urlBuilder.append("&" + URLEncoder.encode("pageNo", "UTF-8") + "=" + URLEncoder.encode("1", "UTF-8")); /*페이지 번호*/
-
-        // 한 페이지에 표시할 결과 수를 URL에 추가합니다. 여기서는 100개의 결과를 요청합니다.
-        urlBuilder.append("&" + URLEncoder.encode("numOfRows", "UTF-8") + "=" + URLEncoder.encode("100", "UTF-8")); /*한 페이지 결과 수*/
-//        urlBuilder.append("&" + URLEncoder.encode("numOfRows", "UTF-8") + "=" + URLEncoder.encode("5", "UTF-8")); /*한 페이지 결과 수*/
-
-        // XML/JSON 여부
-        urlBuilder.append("&" + URLEncoder.encode("type", "UTF-8") + "=" + URLEncoder.encode("json", "UTF-8")); /*XML/JSON 여부*/
-
+        
+        // 테스트 데이터는 하루에 1개씩하자 스케줄러 수정해서
         // 오늘 날짜를 'yyyy-MM-dd' 형식으로 포맷합니다.
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
-        String currentDate = sdf.format(new Date());
+//        String currentDate = sdf.format(new Date());
+        String currentDate = "2023-04-28";
+        urlBuilder.append("&").append(URLEncoder.encode("referenceDate", StandardCharsets.UTF_8)).append("=").append(URLEncoder.encode(currentDate, StandardCharsets.UTF_8)); // 데이터 기준일자 추가
 
-        // 오늘 날짜를 'referenceDate' 파라미터로 URL에 추가합니다.
-        urlBuilder.append("&" + URLEncoder.encode("referenceDate", "UTF-8") + "=" + URLEncoder.encode(currentDate, "UTF-8")); /*데이터기준일자*/
-//        urlBuilder.append("&" + URLEncoder.encode("referenceDate", "UTF-8") + "=" + URLEncoder.encode("2024-05-30", "UTF-8")); /*데이터기준일자*/
+        URI uri = new URI(urlBuilder.toString());
+        URL url = uri.toURL();
 
-        // 완성된 URL 문자열을 URL 객체로 변환합니다.
-        URL url = new URL(urlBuilder.toString());
-        // HTTP 연결을 열고 GET 요청을 설정합니다.
+        // HTTP 연결을 설정하고 GET 요청을 설정합니다.
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET"); // GET 요청 설정
-        conn.setRequestProperty("Content-type", "application/json"); // 요청 헤더 설정
+        conn.setRequestMethod("GET");
+        conn.setRequestProperty("Content-type", "application/json");
+
+        // 로깅: 요청 URL 기록
+        log.info("Request URL: {}", url);
 
         // 응답을 읽기 위한 BufferedReader를 선언합니다.
         BufferedReader rd;
@@ -74,6 +67,9 @@ public class ApiExplorer {
         rd.close();
         // HTTP 연결을 닫습니다.
         conn.disconnect();
+
+        // 로깅: 응답 데이터 기록
+        log.info("Response data: {}", sb);
 
         // 응답 결과를 문자열로 반환합니다.
         return sb.toString();
